helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - http:
        paths:
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 3000
          - path: /private
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 4000
          - path: /caching
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 5201
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3010
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
